Update experience, added NXP

--- a/cv_jan_paesmans.tex
+++ b/cv_jan_paesmans.tex
@@ -156,7 +156,7 @@ designing and implementing new high-tech products.}
 	\resitem{\textbf{Operating Systems:} Linux (Gentoo, Debian, Ubuntu, Red Hat)}
 	\resitem{\textbf{Programming Languages:} C, C++, python, VHDL, Verilog, SystemVerilog, Java, \LaTeX, shell scripting, PHP, SQL}
 	\resitem{\textbf{Methodologies:} VMM for SystemVerilog, Security, Embedded software development, SCRUM, Agile Development}
-	\resitem{\textbf{Embedded OSes:} Linux, Ecos, RTEMS, FreeRTOS}
+	\resitem{\textbf{Embedded OSes:} Linux, Ecos, RTEMS, FreeRTOS, uC/OS}
 	\resitem{\textbf{Networking stacks:} Linux (TCP/IP, wireless), uIP, lwIP}
 	\resitem{\textbf{EDA Tools:} Mentor Graphics Modelsim, Synopsys VCS, Synopsys Design Compiler, Mentor Graphics Seamless, Mentor Graphics Expedition PCB, Xilinx ISE}
 	\resitem{\textbf{Toolchains:} GNU Toolchain (gcc, libc, uclibc, dietlibc, newlib, \dots), LLVM/CLang}
@@ -169,7 +169,11 @@ designing and implementing new high-tech products.}
 %% Experience %%
 \begin{ressection}{Experiences}
 	\begin{ressubsec}{Senior Consultant}{Verotech}{Haasrode, Belgium}{09/2012--present}
-		\begin{ressubsubsec}{Senior Consultant/Team Coach}{Atos Worldline}{Evere, Belgium}{09/2012--present}
+		\begin{ressubsubsec}{Senior Consultant}{NXP}{Leuven, Belgium}{01/2014-present}
+			\ressubsubitem{Embedded software development}
+			\ressubsubitem{Medical/Personal Health}
+		\end{ressubsubsec}
+		\begin{ressubsubsec}{Senior Consultant/Team Coach}{Atos Worldline}{Evere, Belgium}{09/2012--12/2013}
 			\ressubsubitem{Embedded Linux/Ecos software development}
 			\ressubsubitem{Power Management, Battery Management, Software Architecture, Unittesting}
 			\ressubsubitem{Linux device drivers}
