Update with latest experience

--- a/cv_jan_paesmans.tex
+++ b/cv_jan_paesmans.tex
@@ -169,9 +169,13 @@ designing and implementing new high-tech products.}
 %% Experience %%
 \begin{ressection}{Experiences}
 	\begin{ressubsec}{Senior Consultant}{Verotech}{Haasrode, Belgium}{09/2012--present}
-		\begin{ressubsubsec}{Senior Consultant}{NXP}{Leuven, Belgium}{01/2014-present}
+        \begin{ressubsubsec}{Software Architect}{JCD}{Loncin, Belgium}{09/2021-present}
+            \ressubsubitem{Embedded software architect}
+            \ressubsubitem{Defense}
+        \end{ressubsubsec}
+		\begin{ressubsubsec}{Senior Consultant}{NXP}{Leuven, Belgium}{01/2014-09/2019}
 			\ressubsubitem{Embedded software development}
-			\ressubsubitem{Medical/Personal Health}
+			\ressubsubitem{Medical/Personal Health, Smart Amplifiers}
 		\end{ressubsubsec}
 		\begin{ressubsubsec}{Senior Consultant/Team Coach}{Atos Worldline}{Evere, Belgium}{09/2012--12/2013}
 			\ressubsubitem{Embedded Linux/Ecos software development}
