--- a/cv_jan_paesmans.tex
+++ b/cv_jan_paesmans.tex
@@ -268,6 +268,10 @@ designing and implementing new high-tech products.}
 		\ressubitem{Learning SystemC}
 		\ressubitem{Duration: 5 days}
 	\end{ressubsec}
+    \begin{ressubsec}{Ballistics}{Royal Military Academy}{Brussels, Belgium}{2021}
+        \ressubitem{Ballistics (theory \& practice)}
+        \ressubitem{Duration: 2 * 5 days}
+   \end{ressubsec}
 \end{ressection}
 
 %% Languages %%
